<resources>
    <string name="app_name">LoginTwo</string>

    <string name="all_username">USERNAME</string>
    <string name="all_password">PASSWORD</string>

    <!--       Activity Main        -->

    <string name="main_zoo">Zoo</string>
    <string name="main_sign_in">Sign in</string>
    <string name="main_login">Login</string>
    <string name="main_sign_in_with">or sign in with:</string>
    <string name="main_do_not_have_an_account">Don\'t Have An Account?</string>
    <string name="main_forgot_password">Forgot Password</string>


    <!--        Activity Register -->

    <string name="register_email_address">EMAIL ADDRESS</string>
    <string name="register_sign_up">Sign up</string>
    <string name="register_by_sign_up">By Sign up you agree with our terms and conditions</string>
    <string name="register_create_new_account">Create new account</string>

</resources>
